добавил свойства планшета